# crack

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release.yml
docs/: app.js  index.html  styles.css
docs/assets/: EZCut-ui.avif
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
