[package]
name = "ezcut"
version = "0.1.0"
description = "Lightweight batch image editor built with Tauri"
authors = ["OpenAI Codex"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
image = { version = "0.25", default-features = true }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

